# devin-issue-tackler

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
.agents/skills/testing-dashboard/: SKILL.md
.github/workflows/: ci.yml  commands.yml  implement.yml  triage.yml
api/dashboard/: lists.py  metrics.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.test.tsx  App.tsx  main.tsx
dashboard/src/api/: client.ts  hooks.ts  types.ts
dashboard/src/components/: ActionButtons.tsx  IssueCard.tsx  StatusBadge.tsx  Timeline.tsx
dashboard/src/pages/: BacklogBoard.tsx  IssueDetail.tsx  Metrics.tsx  Settings.tsx
orchestrator/: config.py  context.py  devin_client.py  github_client.py  labels.py  main.py  poller.py  webhooks.py
orchestrator/api/: dashboard.py  issues.py  metrics.py  routes.py  settings.py
orchestrator/handlers/: commands.py  implement.py  triage.py
orchestrator/schemas/: api.py  dashboard.py  devin.py
playbooks/: implement.md  triage.md
scripts/: devin_api.py  setup_labels.py  setup_playbooks.py
tests/: test_commands.py  test_config.py  test_devin_api_script.py  test_devin_client.py  test_github_client.py  test_health.py  test_implement_handler.py  test_labels.py  test_poller.py  test_triage_handler.py  test_webhooks.py
